<resources>
    <string name="app_name">HalanxTask</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="date">Date</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="category">Category</string>
    <string name="view_past_bills">View Past Bills</string>
    <string name="create_new_bill">Create new bill</string>
    <string name="delete_bills">Delete Bills</string>
    <string name="enter_house_name">Enter house name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="select_category">Select category</string>
    <string name="enter_tenant_s_name">Enter Tenant\'s Name</string>
    <string name="create">Create</string>
    <string name="phone_number">Phone Number</string>
    <string name="mark_as_paid_offline">Mark as paid offline</string>
    <string name="log_out">Log Out</string>
</resources>