<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/bill_item_iv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_gas"
        android:layout_gravity="end"
        android:alpha="0.85"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/bill_item_category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_item_money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs. 120"
            android:textSize="23sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bill_item_tenant_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant_name"
            android:textSize="19sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/bill_item_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>