<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fetch_bill_bottom_sheet"
    app:behavior_peekHeight="0dp"
    android:paddingBottom="20dp"
    android:background="@drawable/fetch_bill_background"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_layout"
            app:title="Bill Info"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_baseline_keyboard_arrow_down_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/fetch_bill_category_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/fetch_bill_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:text="Address"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/fetch_bill_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due Date : "
                android:textSize="19sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp"/>

            <TextView
                android:id="@+id/fetch_bill_money_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount To Be Paid. : "
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"/>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="#A3A3A3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tenant"
                android:textSize="23sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="8dp"
                    app:tint="@android:color/black"
                    app:srcCompat="@drawable/ic_user"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/fetch_bill_tenant_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenant_name"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:tint="@android:color/black"
                    app:srcCompat="@drawable/ic_call" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fetch_bill_tenant_phone_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="(650) 555-1122"
                        android:textColor="#292929"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/phone_number"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_undraw_receipt_ecdd"
        android:scaleType="fitCenter"
        android:minHeight="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:alpha="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>